# indoctrine.ai

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  RELEASE_NOTES.md  config.yaml  pyproject.toml  pytest.ini
agent_indoctrination/: __init__.py
agent_indoctrination/cli/: nyan_progress.py
agent_indoctrination/core/: agent.py  config.py  dataset.py  embeddings.py  guardrails.py  judge.py  message.py  orchestrator.py  synthetic.py
agent_indoctrination/engines/attack/: __init__.py  adaptive_attack.py  attacker_agent.py  engine.py  image_injection.py  tool_use_attack.py
agent_indoctrination/engines/fairness/: __init__.py  data_loaders.py  dataset.py  engine.py  interpreter.py  llm_testing.py  metrics.py  report.py
agent_indoctrination/engines/governance/: engine.py
agent_indoctrination/engines/truth/: answer_relevance.py  consistency.py  context_relevance.py  engine.py  groundedness.py  rag_evaluator.py
agent_indoctrination/engines/values/: engine.py
agent_indoctrination/reporting/: benchmark.py  generator.py  visualizer.py
config/: default.yaml
config/examples/: comprehensive.yaml  lmstudio.yaml  minimal.yaml  ollama.yaml
docs/: advanced-topics.md  best-practices.md  configuration.md  examples.md  getting-started.md  index.md  testing-engines.md  troubleshooting.md
docs/reports/: FAIRNESS_EXECUTIVE_SUMMARY.md  FAIRNESS_IMPLEMENTATION_EVALUATION.md  FAIRNESS_METRICS_SUMMARY.md  FAIRNESS_QUICK_WINS.md  FAIRNESS_VISUAL_ASSESSMENT.md
examples/: demo_llm_fairness.py  demo_tool_use.py  fairness_demo.py  fairness_report.html  fairness_report.json  full_test.py  quickstart.py  quickstart_nyan.py  test_adaptive_attack.py  test_embeddings.py  test_lmstudio.py  test_ollama.py  test_rag_triad.py
guardrails/: config.yml  prompts.co
indoctrine.ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
indoctrine_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_guardrail_loop.py  test_multimodal.py  test_sdg.py  test_tool_use_attack.py
