[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indoctrine-ai"
version = "0.1.0"
description = "The Open-Source Framework for Agentic Ethics, AI Agent Values, and Safety Compliance (NIST, EU AI Act)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "16246541-corp", email = "contact@indoctrine.ai" }
]
keywords = [
    "agentic-ethics",
    "ai-values",
    "ai-safety",
    "constitutional-ai",
    "llm-verification",
    "ai",
    "agent",
    "testing",
    "security",
    "compliance",
    "governance",
    "prompt-injection",
    "hallucination",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "sentence-transformers>=2.2.2",
]

[project.optional-dependencies]
attack = [
    "pyrit>=0.2.0",
    "giskard>=2.0.0",
]
all = [
    "agent-indoctrination[attack]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
indoctrinate = "agent_indoctrination.cli.main:main"

[project.urls]
Homepage = "https://github.com/16246541-corp/indoctrine.ai"
Documentation = "https://github.com/16246541-corp/indoctrine.ai/tree/main/docs"
Repository = "https://github.com/16246541-corp/indoctrine.ai"
Issues = "https://github.com/16246541-corp/indoctrine.ai/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_indoctrination*"]

[tool.setuptools.package-data]
agent_indoctrination = ["py.typed", "config/**/*.yaml", "templates/**/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

